Done quick changes to fix deprecations from Java 8 and support new behaviours of Java 21